--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://chrischo94.github.io/reactPortfolioFinal",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -40,6 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://chrischo94.github.io/reactPortfolioFinal"
+  }
 }
