--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage": "https://chrischo94.github.io/reactPortfolioFinal",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
