--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://chrischo94.github.io/reactPortfolioFinal",
+  "homepage": "https://chrischo94.github.io/reactPortfolioFinal/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -17,12 +17,13 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "npm run build&&gh-pages -d build",
+    
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
